<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.uts_alat_pertanian.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/catalogueFragment"
        android:name="com.example.uts_alat_pertanian.CatalogueFragment"
        android:label="@string/title_catalogue"
        tools:layout="@layout/fragment_catalogue">
        <argument
            android:name="CATEGORY_KEY"
            app:argType="string"
            android:defaultValue="" />
        <!-- 🔎 query dari Home -->
        <argument
            android:name="SEARCH_QUERY"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.uts_alat_pertanian.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.uts_alat_pertanian.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.uts_alat_pertanian.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.uts_alat_pertanian.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail">
        <argument android:name="PRODUCT_NAME" app:argType="string" />
        <argument android:name="PRODUCT_PRICE" app:argType="string" />
        <argument android:name="PRODUCT_IMAGE" app:argType="integer" />
        <argument android:name="PRODUCT_DESC" app:argType="string" />
    </fragment>

</navigation>
